@@ -1,3 +1,13 @@
+2009-10-31  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by John Sullivan.
+
+        https://bugs.webkit.org/show_bug.cgi?id=30982
+        createHTMLDocument doesn't escape ampersand and less-than in title
+
+        * fast/dom/DOMImplementation/createHTMLDocument-title-expected.txt: Added.
+        * fast/dom/DOMImplementation/createHTMLDocument-title.html: Added.
+
 2009-11-01  Hironori Bono  <hbono@chromium.org>
 
         Reviewed by Darin Adler.
